# mlops_group_project

./: .fake.env  .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  checklist.md  cloudbuild.yaml  data.dvc  dockerdata.dockerfile  evaluating.dockerfile  frontendbuild.yaml  index.html  objects.inv  pyproject.toml  requirements.txt  requirements_dev.txt  tasks.py  training.dockerfile
.devcontainer/: devcontainer.json
.dvc/: config
.github/workflows/: deploy-frontend-cloudbuild.yml  deploy_docs.yaml  lint-pr-title.yaml  run-pre-commit.yaml  stage_model.yaml  tests.yaml
configs/: default_config.yaml  sweep.yaml
configs/dataset/: base.yaml  cloud.yaml
configs/evaluate/: base.yaml
configs/experiment/: base.yaml  cloud.yaml  exp1.yaml  trials1.yaml
configs/logging/: base.yaml  base_log.yaml
configs/optimizer/: adam.yaml  sgd.yaml
configs/profiler/: advanced.yaml  pytorch.yaml
dockerfiles/: api.dockerfile  evaluate.dockerfile  frontend.dockerfile  train.dockerfile
docs/: README.md  mkdocs.yaml
docs/source/: getting-started.md  index.md  workflows.md
experiments/: config.yaml
getting-started/: index.html
reference/api/: index.html
reference/configs/: index.html
reference/data/: index.html
reference/evaluate/: index.html
reference/evidently/: index.html
reference/frontend/: index.html
reference/model/: index.html
reference/onnx/: index.html
reference/tasks_invocations/: index.html
reference/tests/: index.html
reference/train/: index.html
reference/visualize/: index.html
reports/: README.md  report.html
search/: search_index.json
src/fakeartdetector/: api.py  data.py  evaluate.py  evidently_report.py  export_onnx.py  frontend.py  model.py  (+7 more)
tests/: test_api.py  test_data.py  test_evaluate.py  test_model.py  test_stage_model.py  test_train.py  test_training.py
workflows/: index.html
(+24 files in other folders)
