[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "fakeartdetector"
version = "0.0.1"
description = "fake art detector model for classifying original art from ai generated one"
authors = [
  { name = "Ioannis Bekiaris", email = "s250379@dtu.dk" },
  { name = "Levente Buzga", email = "s242964@dtu.dk" },
  { name = "Eric", email = "your@email.com" },
  { name = "Tamas", email = "your@email.com" },
]
license = { file = "LICENSE" }
keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.4.2",
    "dvc>=3.66.0",
    "dvc-ssh>=4.2.2",
    "fastapi==0.115.6",
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "mkdocs-material>=9.4.6",
    "pre-commit>=4.1.0",
    "pytorch-lightning>=2.6.0",
    "scikit-learn>=1.8.0",
    "tensorboard>=2.20.0",
    "torch==2.6.0",
    "torchvision>=0.21.0",
    "typer==0.21.1",
    "uvicorn==0.40.0",
]

[dependency-groups]
dev = [
    "coverage==7.6.9",
    "invoke==2.2.0",
    "mkdocs-material==9.7.1",
    "mkdocstrings[python]==0.27.0",
    "mkdocs==1.6.1",
    "pre-commit==4.5.1",
    "pytest==8.3.4",
    "ruff==0.14.11",
    "mkdocstrings-python==1.12.2",
    "ty>=0.0.9",
]


[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]
torchvision = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff]
line-length = 120
lint.select = ["I", "N", "E", "W", "F"]

[tool.coverage.run]
omit = ["tests/*",
        "*_remote_module_non_scriptable.py"]

[project.scripts]
train = "fakeartdetector.train:main"
